Fix clipping with nav bar use z index

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,6 +3,7 @@ nav {
   justify-content: space-between;
   position: sticky;
   top: 0;
+  z-index: 1;
   height: 120px;
   width: 100vw;
   background-color: #4056A1;
